upgrade to jdk8;use cgroup memory limit to calculate heap for tsdb and hbase; tabs to spaces