@@ -4,10 +4,12 @@ ENV TINI_VERSION v0.18.0
 ENV TSDB_VERSION 2.3.1
 ENV HBASE_VERSION 1.4.4
 ENV GNUPLOT_VERSION 5.2.4
-ENV JAVA_HOME /usr/lib/jvm/java-1.7-openjdk
-ENV PATH $PATH:/usr/lib/jvm/java-1.7-openjdk/bin/
-ENV ALPINE_PACKAGES "rsyslog bash openjdk7 make wget libgd libpng libjpeg libwebp libjpeg-turbo cairo pango lua"
+ENV JAVA_HOME /usr/lib/jvm/java-1.8-openjdk
+ENV PATH $PATH:/usr/lib/jvm/java-1.8-openjdk/bin/
+ENV ALPINE_PACKAGES "rsyslog bash openjdk8 make wget libgd libpng libjpeg libwebp libjpeg-turbo cairo pango lua"
 ENV BUILD_PACKAGES "build-base autoconf automake git python cairo-dev pango-dev gd-dev lua-dev readline-dev libpng-dev libjpeg-turbo-dev libwebp-dev"
+ENV HBASE_OPTS "-XX:+UseConcMarkSweepGC -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
+ENV JVMARGS "-XX:+UseConcMarkSweepGC -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -enableassertions -enablesystemassertions"
 
 # Tini is a tiny init that helps when a container is being culled to stop things nicely
 ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini-static-amd64 /tini
@@ -43,12 +45,12 @@ RUN apk add --virtual builddeps \
   && rm -rf /opt/opentsdb/opentsdb-${TSDB_VERSION}
 
 RUN cd /tmp && \
-	wget https://datapacket.dl.sourceforge.net/project/gnuplot/gnuplot/${GNUPLOT_VERSION}/gnuplot-${GNUPLOT_VERSION}.tar.gz && \
-	tar xzf gnuplot-${GNUPLOT_VERSION}.tar.gz && \
-	cd gnuplot-${GNUPLOT_VERSION} && \
-	./configure && \
-	make install && \
-	cd /tmp && rm -rf /tmp/gnuplot-${GNUPLOT_VERSION} && rm /tmp/gnuplot-${GNUPLOT_VERSION}.tar.gz  
+    wget https://datapacket.dl.sourceforge.net/project/gnuplot/gnuplot/${GNUPLOT_VERSION}/gnuplot-${GNUPLOT_VERSION}.tar.gz && \
+    tar xzf gnuplot-${GNUPLOT_VERSION}.tar.gz && \
+    cd gnuplot-${GNUPLOT_VERSION} && \
+    ./configure && \
+    make install && \
+    cd /tmp && rm -rf /tmp/gnuplot-${GNUPLOT_VERSION} && rm /tmp/gnuplot-${GNUPLOT_VERSION}.tar.gz
 
 RUN apk del builddeps && rm -rf /var/cache/apk/*
 
@@ -77,6 +79,8 @@ RUN for i in /opt/bin/start_hbase.sh /opt/bin/start_opentsdb.sh /opt/bin/create_
     do \
         sed -i "s#::JAVA_HOME::#$JAVA_HOME#g; s#::PATH::#$PATH#g; s#::TSDB_VERSION::#$TSDB_VERSION#g;" $i; \
     done
+
+RUN echo "export HBASE_OPTS=\"${HBASE_OPTS}\"" >> /opt/hbase/conf/hbase-env.sh
 
 
 #4242 is tsdb, rest are hbase ports
